MINOR: Use Map/Set/List.of in tools tests