@@ -33,12 +33,10 @@ import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.nio.file.NoSuchFileException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -48,9 +46,7 @@ public class DeleteRecordsCommandTest {
 
     @ClusterTest
     public void testCommand(ClusterInstance cluster) throws Exception {
-        Map<String, Object> adminProps = new HashMap<>();
-
-        adminProps.put(AdminClientConfig.RETRIES_CONFIG, 1);
+        Map<String, Object> adminProps = Map.of(AdminClientConfig.RETRIES_CONFIG, 1);
 
         try (Admin admin = cluster.admin(adminProps)) {
             assertThrows(
@@ -62,7 +58,7 @@ public class DeleteRecordsCommandTest {
                 "Offset json file contains duplicate topic partitions: t-0"
             );
 
-            admin.createTopics(Collections.singleton(new NewTopic("t", 1, (short) 1))).all().get();
+            admin.createTopics(Set.of(new NewTopic("t", 1, (short) 1))).all().get();
 
             Properties props = new Properties();
 
@@ -159,8 +155,8 @@ public class DeleteRecordsCommandTest {
         );
 
         assertEquals(2, res.size());
-        assertEquals(Arrays.asList(0L, 2L, 0L), res.get(new TopicPartition("t", 0)));
-        assertEquals(Collections.singletonList(1L), res.get(new TopicPartition("t", 1)));
+        assertEquals(List.of(0L, 2L, 0L), res.get(new TopicPartition("t", 0)));
+        assertEquals(List.of(1L), res.get(new TopicPartition("t", 1)));
     }
 
     /**
