@@ -59,7 +59,6 @@ import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -70,10 +69,6 @@ import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 import static java.util.Arrays.asList;
-import static java.util.Collections.emptyMap;
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static org.apache.kafka.common.KafkaFuture.completedFuture;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -170,7 +165,7 @@ public class TransactionsCommandTest {
 
 
         Mockito.when(describeResult.partitionResult(topicPartition)).thenReturn(describeFuture);
-        Mockito.when(admin.describeProducers(singleton(topicPartition), expectedOptions)).thenReturn(describeResult);
+        Mockito.when(admin.describeProducers(Set.of(topicPartition), expectedOptions)).thenReturn(describeResult);
 
         execute(args);
         assertNormalExit();
@@ -182,8 +177,8 @@ public class TransactionsCommandTest {
         assertEquals(expectedHeaders, table.get(0));
 
         Set<List<String>> expectedRows = Set.of(
-            asList("12345", "15", "20", "1300", "1599509565", "990"),
-            asList("98765", "30", "-1", "2300", "1599509599", "None")
+            List.of("12345", "15", "20", "1300", "1599509565", "990"),
+            List.of("98765", "30", "-1", "2300", "1599509599", "None")
         );
         assertEquals(expectedRows, new HashSet<>(table.subList(1, table.size())));
     }
@@ -233,9 +228,9 @@ public class TransactionsCommandTest {
         assertEquals(expectedHeaders, table.get(0));
 
         Set<List<String>> expectedRows = Set.of(
-            asList("foo", "0", "12345", "Ongoing"),
-            asList("bar", "0", "98765", "PrepareAbort"),
-            asList("baz", "1", "13579", "CompleteCommit")
+            List.of("foo", "0", "12345", "Ongoing"),
+            List.of("bar", "0", "98765", "PrepareAbort"),
+            List.of("baz", "1", "13579", "CompleteCommit")
         );
         assertEquals(expectedRows, new HashSet<>(table.subList(1, table.size())));
     }
@@ -302,11 +297,11 @@ public class TransactionsCommandTest {
                 15,
                 10000,
                 OptionalLong.of(transactionStartTime),
-                singleton(new TopicPartition("bar", 0))
+                Set.of(new TopicPartition("bar", 0))
         ));
 
         Mockito.when(describeResult.description(transactionalId)).thenReturn(describeFuture);
-        Mockito.when(admin.describeTransactions(singleton(transactionalId))).thenReturn(describeResult);
+        Mockito.when(admin.describeTransactions(Set.of(transactionalId))).thenReturn(describeResult);
 
         // Add a little time so that we can see a positive transaction duration in the output
         time.sleep(5000);
@@ -320,7 +315,7 @@ public class TransactionsCommandTest {
         List<String> expectedHeaders = TransactionsCommand.DescribeTransactionsCommand.HEADERS;
         assertEquals(expectedHeaders, table.get(0));
 
-        List<String> expectedRow = asList(
+        List<String> expectedRow = List.of(
             String.valueOf(coordinatorId),
             transactionalId,
             "12345",
@@ -463,7 +458,7 @@ public class TransactionsCommandTest {
 
         DescribeProducersResult describeResult = Mockito.mock(DescribeProducersResult.class);
         KafkaFuture<PartitionProducerState> describeFuture = completedFuture(
-            new PartitionProducerState(singletonList(
+            new PartitionProducerState(List.of(
                 new ProducerState(producerId, producerEpoch, 1300, 1599509565L,
                     OptionalInt.of(coordinatorEpoch), OptionalLong.of(startOffset))
             )));
@@ -474,7 +469,7 @@ public class TransactionsCommandTest {
             topicPartition, producerId, producerEpoch, coordinatorEpoch);
 
         Mockito.when(describeResult.partitionResult(topicPartition)).thenReturn(describeFuture);
-        Mockito.when(admin.describeProducers(singleton(topicPartition))).thenReturn(describeResult);
+        Mockito.when(admin.describeProducers(Set.of(topicPartition))).thenReturn(describeResult);
 
         Mockito.when(abortTransactionResult.all()).thenReturn(abortFuture);
         Mockito.when(admin.abortTransaction(expectedAbortSpec)).thenReturn(abortTransactionResult);
@@ -570,7 +565,7 @@ public class TransactionsCommandTest {
         OptionalInt coordinatorEpoch,
         OptionalLong txnStartOffset
     ) {
-        PartitionProducerState partitionProducerState = new PartitionProducerState(singletonList(
+        PartitionProducerState partitionProducerState = new PartitionProducerState(List.of(
             new ProducerState(
                 producerId,
                 producerEpoch,
@@ -583,11 +578,11 @@ public class TransactionsCommandTest {
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
         Mockito.when(result.all()).thenReturn(
-            completedFuture(singletonMap(topicPartition, partitionProducerState))
+            completedFuture(Map.of(topicPartition, partitionProducerState))
         );
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(topicPartition),
+            List.of(topicPartition),
             new DescribeProducersOptions()
         )).thenReturn(result);
     }
@@ -634,7 +629,7 @@ public class TransactionsCommandTest {
         };
 
         String topic = "foo";
-        expectListTopics(singleton(topic));
+        expectListTopics(Set.of(topic));
 
         Node node0 = new Node(0, "localhost", 9092);
         Node node1 = new Node(1, "localhost", 9093);
@@ -658,13 +653,13 @@ public class TransactionsCommandTest {
             false,
             Arrays.asList(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(new TopicPartition(topic, 1)),
+            List.of(new TopicPartition(topic, 1)),
             new DescribeProducersOptions().brokerId(brokerId)
         )).thenReturn(result);
 
@@ -710,13 +705,13 @@ public class TransactionsCommandTest {
             false,
             Arrays.asList(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
-            Collections.singletonList(new TopicPartition(topic, 1)),
+            List.of(new TopicPartition(topic, 1)),
             new DescribeProducersOptions().brokerId(brokerId)
         )).thenReturn(result);
 
@@ -759,10 +754,10 @@ public class TransactionsCommandTest {
             false,
             Arrays.asList(partition0, partition1)
         );
-        expectDescribeTopics(singletonMap(topic, description));
+        expectDescribeTopics(Map.of(topic, description));
 
         DescribeProducersResult result = Mockito.mock(DescribeProducersResult.class);
-        Mockito.when(result.all()).thenReturn(completedFuture(emptyMap()));
+        Mockito.when(result.all()).thenReturn(completedFuture(Map.of()));
 
         Mockito.when(admin.describeProducers(
             Arrays.asList(new TopicPartition(topic, 0), new TopicPartition(topic, 1)),
@@ -851,11 +846,11 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.emptyList())
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of())
         );
 
-        expectDescribeTransactions(Collections.emptyMap());
+        expectDescribeTransactions(Map.of());
 
         execute(args);
         assertNormalExit();
@@ -907,14 +902,14 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         DescribeTransactionsResult result = Mockito.mock(DescribeTransactionsResult.class);
         Mockito.when(result.description(transactionalId))
             .thenReturn(failedFuture(new TransactionalIdNotFoundException(transactionalId + " not found")));
-        Mockito.when(admin.describeTransactions(singleton(transactionalId))).thenReturn(result);
+        Mockito.when(admin.describeTransactions(Set.of(transactionalId))).thenReturn(result);
 
         execute(args);
         assertNormalExit();
@@ -972,8 +967,8 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         // Although there is a transaction in progress from the same
@@ -986,10 +981,10 @@ public class TransactionsCommandTest {
             producerEpoch,
             60000,
             OptionalLong.of(time.milliseconds()),
-            singleton(new TopicPartition("foo", 10))
+            Set.of(new TopicPartition("foo", 10))
         );
 
-        expectDescribeTransactions(singletonMap(transactionalId, description));
+        expectDescribeTransactions(Map.of(transactionalId, description));
 
         execute(args);
         assertNormalExit();
@@ -1020,7 +1015,7 @@ public class TransactionsCommandTest {
 
         long durationMinutes = TimeUnit.MILLISECONDS.toMinutes(time.milliseconds() - lastTimestamp);
 
-        List<String> expectedRow = asList(
+        List<String> expectedRow = List.of(
             topicPartition.topic(),
             String.valueOf(topicPartition.partition()),
             String.valueOf(producerId),
@@ -1070,8 +1065,8 @@ public class TransactionsCommandTest {
         );
 
         expectListTransactions(
-            new ListTransactionsOptions().filterProducerIds(singleton(producerId)),
-            singletonMap(1, Collections.singletonList(listing))
+            new ListTransactionsOptions().filterProducerIds(Set.of(producerId)),
+            Map.of(1, List.of(listing))
         );
 
         // The coordinator shows an active transaction with the same epoch
@@ -1084,10 +1079,10 @@ public class TransactionsCommandTest {
             producerEpoch,
             60000,
             OptionalLong.of(lastTimestamp),
-            singleton(topicPartition)
+            Set.of(topicPartition)
         );
 
-        expectDescribeTransactions(singletonMap(transactionalId, description));
+        expectDescribeTransactions(Map.of(transactionalId, description));
 
         execute(args);
         assertNormalExit();
