@@ -59,11 +59,11 @@ import java.nio.file.Files;
 import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.TreeMap;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Function;
@@ -209,11 +209,11 @@ public class ReplicationQuotasTestRig {
 
             Map<Integer, List<Integer>> replicas = IntStream.rangeClosed(0, config.partitions - 1).boxed().collect(Collectors.toMap(
                 Function.identity(),
-                partition -> Collections.singletonList(nextReplicaRoundRobin.getAsInt())
+                partition -> List.of(nextReplicaRoundRobin.getAsInt())
             ));
 
             startBrokers(config.brokers);
-            adminClient.createTopics(Collections.singleton(new NewTopic(TOPIC_NAME, replicas))).all().get();
+            adminClient.createTopics(Set.of(new NewTopic(TOPIC_NAME, replicas))).all().get();
 
             TestUtils.waitUntilTrue(
                     () -> cluster.brokers().values().stream().allMatch(server -> {
@@ -248,7 +248,7 @@ public class ReplicationQuotasTestRig {
             long start = System.currentTimeMillis();
 
             ReassignPartitionsCommand.executeAssignment(adminClient, false,
-                ReassignPartitionsCommand.formatAsReassignmentJson(newAssignment, Collections.emptyMap()),
+                ReassignPartitionsCommand.formatAsReassignmentJson(newAssignment, Map.of()),
                 config.throttle, -1L, 10000L, Time.SYSTEM, false);
 
             //Await completion
@@ -282,7 +282,7 @@ public class ReplicationQuotasTestRig {
         }
 
         void logOutput(ExperimentDef config, Map<Integer, List<Integer>> replicas, Map<TopicPartition, List<Integer>> newAssignment) throws Exception {
-            List<TopicPartitionInfo> actual = adminClient.describeTopics(Collections.singleton(TOPIC_NAME))
+            List<TopicPartitionInfo> actual = adminClient.describeTopics(Set.of(TOPIC_NAME))
                 .allTopicNames().get().get(TOPIC_NAME).partitions();
 
             Map<Integer, List<Integer>> curAssignment = actual.stream().collect(Collectors.toMap(
